# vortex-369-dao

./: .env.example  .gas-snapshot  .gitignore  .gitmodules  BENCHMARK_RESULTS.md  CHANGELOG.md  Cargo.toml  FINAL_SUMMARY.md  GITHUB_PUSH_SUCCESS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  Implementation_plan.md  LOCAL_TEST_GUIDE.md  PROJECT_COMPLETE.md  Procfile  QUICK-ACTION-CHECKLIST.md  QUICKSTART.md  README.md  RESTRUCTURE-V2-ANALYSIS.md  ROADMAP-TO-PRODUCTION.md  SECURITY-QUICK-REFERENCE.md  TESTING_STATUS.md  TESTNET_INTEGRATION.md  TESTNET_READY.md  TEST_RESULTS.md  TREASURY.md  TreasuryVault.sol  VortexDAO.sol  api_implementation_plan.md  app.py  before-after-comparison.md  foundry.toml  package-lock.json  pellion_mainnet_deployment.md  quantum_node_implementation_plan.md  requirements.txt  resonance_demo.html  safe-grant-scorer-role.json  safe-pause.json  safe-unpause.json  (+8 more)
.github/: CONTRIBUTING.md
backend/: Cargo.toml
backend/src/: config.rs  constants.rs  main.rs  relayer.rs  types.rs
backend/src/api/: health.rs  mod.rs  photonic.rs  score.rs
backend/src/models/: mod.rs
backend/src/services/: engine.rs  macedon.rs  mod.rs
backend/src/utils/: mod.rs
benches/: synthetic_bench.rs
cache/: solidity-files-cache.json  test-failures
circuits/: Verifier.sol  circuit.circom  circuit.sym  circuit_0000.zkey  circuit_0001.zkey  input.json  measure_time.js  proof.json  witness.wtns
contracts/: LightPhotonicGrid.sol  (+5 more)
vortex-369-dao-master-backup/vortex-369-dao-master/: .gitignore  Cargo.toml  SECURITY.md  config.toml
vortex-369-dao-master-backup/vortex-369-dao-master/.github/ISSUE_TEMPLATE/: config.yml  enhancement.md
vortex-369-dao-master-backup/vortex-369-dao-master/contracts/: NullOffice.sol  VortexDAO.sol  VortexDAOSimplified.sol  VortexResolver.sol
vortex-369-dao-master-backup/vortex-369-dao-master/scripts/: Deploy.s.sol  deploy_testnet.sh  download_model.sh  test_deployed_contracts.sh  test_governance_cycle.sh
vortex-369-dao-master-backup/vortex-369-dao-master/src/: lib.rs  macedon.rs  main_new.rs  relayer.rs  resolver.rs  types.rs
vortex-369-dao-master-backup/vortex-369-dao-master/src/chain/: mod.rs
vortex-369-dao-master-backup/vortex-369-dao-master/src/governance/: action.rs  core.rs  mod.rs  phase_engine.rs
vortex-369-dao-master-backup/vortex-369-dao-master/src/synthetic/: resonance.rs  types.rs
vortex-369-dao-master-backup/vortex-369-dao-master/tests/: integration_tests.rs
(+195 files in other folders)
