[package]
name = "vortex-dao-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.3"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
env_logger = "0.10"
log = "0.4"
regex = "1.8"

[dev-dependencies]
actix-web = { version = "4.3", features = ["macros"] }
